--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "electric-sql": "^0.10.0",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wa-sqlite": "github:rhashimoto/wa-sqlite#semver:^0.9.8",
