--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,7 +19,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "electric-sql": "^0.10.0",
+    "electric-sql": "^0.10.1",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wa-sqlite": "github:rhashimoto/wa-sqlite#semver:^0.9.8",
